--- a/.github/workflows/qa-asbool.yml
+++ b/.github/workflows/qa-asbool.yml
@@ -21,10 +21,10 @@ jobs:
           channel: 'stable'
       - run: dart pub get       
       - run: dart analyze       
-      - run: dart test --coverage=coverage -r github
+      - run: dart run coverage:test_with_coverage
       - name: Upload coverage reports to Codecov
         run: |
           curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
-          ./codecov -t ${CODECOV_TOKEN}      
+          ./codecov -t ${CODECOV_TOKEN} 
       - run: echo "🍏 This job's status is ${{ job.status }}."
