--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 build/
 coverage/
 codecov
+doc/
 
 # Omit committing pubspec.lock for library packages; see
 # https://dart.dev/guides/libraries/private-files#pubspeclock.
